# Reproduce-Transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/data/: wmt14_en_de.toml
config/eval/: eval.toml
config/train/: ac.toml  decent.toml  decent_base.toml  decent_big.toml  seed1.toml  seed2.toml  seed3.toml  transformer_base.toml  transformer_big.toml
configs/: eval.toml  long_train.toml
configs/data/: wmt14_en_fr.toml
configs/decent/: base_adam_8w.toml
configs/decent/mix/: adapt_1.5.toml  adapt_1.toml  adapt_2.toml
configs/model/: base.toml  big.toml
configs/seeds/: seed1.toml  seed2.toml  seed3.toml
configs/topo/: 1p-ring.toml  complete.toml
script/train/: 8xA100.sh
scripts/eval/: eval.sh
scripts/plot/: metrics.py
scripts/train/: 4xA100.sh  4xA40.sh  8xA100.sh  8xA40.sh  d_4xA40.sh  d_8xA100.sh  d_8xA40.sh
src/: conf.py  decent_train.py  eval.py  model.py  plot.py  preprocess.py  sync_train.py  train.py  utils.py
src/data/: __init__.py  dataloader.py  dataset.py  sampler.py
src/decent_dp/: ddp.py  optim.py  topo.py
src/model/: __init__.py  common.py  decoder.py  encoder.py
