[project]
name = "reproduce-transformer"
version = "0.1.0"
description = "Reproduce training and evaluation of Transformer models with PyTorch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evaluate>=0.4.3",
    "loguru>=0.7.3",
    "psutil>=7.1.3",
    "pydantic>=2.11.6",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.1",
    "tomli-w>=1.2.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "torch-tb-profiler>=0.4.3",
]
